some refactor and unneeded parts